# arbeitszeitapp

./: .autoformattingrc  .coveragerc  .dir-locals.el  .dockerignore  .flaskenv  .gitignore  .readthedocs.yaml  CONDUCT.rst  Dockerfile  MANIFEST.in  Makefile  Procfile  README.me  README.rst  alembic.ini  babel.cfg  compose.yaml  config.py  constraints.txt  cron_job_heroku.sh  cron_job_plan_activation.py  development-settings.py  flake.nix  format_code.py  insert_users.sql  my_simulation.py  production-settings.py  pyproject.toml  regenerate-api-docs  releaseapp_heroku.sh  requirements-dev.txt  requirements.txt  run-checks  scenario.ipynb  setup.cfg  startapp_heroku.sh  update-bulma  update-requirements-from-nix  update-translations  wsgi.py
.github/workflows/: nixos-stable-tests.yml  python-app.yml
arbeitszeit/: account_details.py  accountant_notifications.py  actors.py  anonymization.py  approval_factory.py  control_thresholds.py  datetime_service.py  decimal.py  dependency_injection.py  email.py  email_notifications.py  entities.py  errors.py  fpc_balance.py  giro_office.py  injector.py  mail_service.py  member.py  member_notifications.py  password_hasher.py  payout_factor.py  plan_details.py  plan_factory.py  plan_summary.py  political_decisions.py  presenters.py  price_calculator.py  psf_balance.py  purchase_factory.py  records.py  repositories.py  token.py  transaction_factory.py  transactions.py  transfers.py  use_cases.py  user_action.py
arbeitszeit/interactors/: accept_cooperation.py  accept_coordination_transfer.py  answer_company_work_invite.py  approve_plan.py  cancel_cooperation_solicitation.py  change_user_email_address.py  change_user_password.py  confirm_company.py  confirm_member.py  create_cooperation.py  create_draft_from_plan.py  create_plan_draft.py  delete_draft.py  deny_cooperation.py  edit_draft.py  end_cooperation.py  get_company_dashboard.py  (+59 more)
arbeitszeit_benchmark/: __main__.py  get_company_summary_benchmark.py  get_company_transactions.py  get_statistics.py  query_plans_sorted_by_activation_date_benchmark.py  runner.py  show_prd_account_details_benchmark.py  show_r_account_details_benchmark.py
arbeitszeit_db/: __init__.py  db.py  models.py  repositories.py
arbeitszeit_development/: alembic.ini  command.py  dev_cli.py  development_server.py  development_settings.py  generate_type_stubs.py  nix.py  timeline_printer.py  update_bulma.py  update_constraints.py  update_dependencies.py  update_flask_restx.py  update_python_packages.py
arbeitszeit_flask/: __init__.py  auto_migrate.py  babel.py  class_based_view.py  commands.py  configuration_base.py  context_processors.py  contol_thresholds.py  control_thresholds.py  database.py  datetime.py  dependency_injection.py  development_settings.py  email_configuration.py  error.py  extensions.py  filter.py  filters.py  flask_colors.py  flask_plotter.py  flask_request.py  flask_session.py  forms.py  language_repository.py  mail_service.py  models.py  next_url.py  password_hasher.py  political_decisions.py  production_settings.py  profiling.py  template.py  text_renderer.py  token.py  translator.py  types.py  url_index.py
arbeitszeit_web/: answer_company_work_invite.py  authentication.py  check_for_unread_message.py  colors.py  create_cooperation.py  create_draft.py  create_email.py  create_offer.py  datetime_formatter.py  delete_offer.py  delete_plan.py  email.py  email_sender.py  fields.py  forms.py  get_account_p.py  get_account_r.py  get_company_summary.py  get_company_transactions.py  get_coop_summary.py  get_member_profile_info.py  get_plan_summary.py  get_plan_summary_accountant.py  get_plan_summary_company.py  get_plan_summary_member.py  get_prefilled_draft_data.py  get_statistics.py  hide_plan.py  invite_worker_presenter.py  invite_worker_to_company.py  json.py  json_handling.py  language_service.py  list_all_cooperations.py  list_drafts_of_company.py  list_messages.py  list_plans.py  malformed_input_data.py  notification.py  pagination.py  (+28 more)
build_support/: backend.py  project.py  translations.py
docs/: concepts.rst  conf.py  config_options_GENERATED.rst  configuration.rst  datamodel.rst  development_guide.rst  development_philosophy.rst  development_setup.rst  further_development_setup.rst  generate_docs.py  getting_started.rst  hosting.rst  how_to_contribute.rst  index.rst  introduction.rst  license.rst  philosophy.rst  requirements.txt
nix/: devShell.nix  developmentOverrides.nix  docker.nix  pythonPackages.nix
project/: Procfile  __init__.py  app.py  auth.py  commands.py  composition_of_prices.py  configuration_base.py  database.py  datetime.py  dependency_injection.py  economy.py  email.py  error.py  extensions.py  flask_session.py  forms.py  kauf_vorgang.py  mail_service.py  main_betriebe.py  main_nutzer.py  models.py  next_url.py  notifications.py  profiling.py  requirements.txt  sql.py  such_vorgang.py  suchen_und_kaufen.py  tables.py  template.py  token.py  translator.py  url_index.py
scenarios/: dependency_injection.py
tests/: accountant_invitation_presenter.py  company.py  conftest.py  control_thresholds.py  data_generators.py  datetime_service.py  dependency_injection.py  development_server.py  economic_scenarios.py  email.py  email_notifications.py  forms.py  language_service.py  lazy_property.py  mail_service.py  markers.py  password_hasher.py  plan_summary.py  plotter.py  political_decisions.py  repositories.py  request.py  search_tree.py  session.py  strategies.py  test_account.py  test_add_worker_to_company.py  test_calculate_plan_expiration.py  test_calculate_plan_expiration_and_check_if_expired.py  test_check_plans_for_expiration.py  test_company_registration.py  test_create_plan.py  test_get_member_profile_info.py  test_get_member_workplaces.py  test_get_plan_summary.py  test_get_statistics.py  test_get_transaction_infos.py  test_grant_credit.py  test_member_registration.py  test_pay_consumer_product.py  (+12 more)
translations/: create_files_to_translate.py  create_templates.sh  update_translation.sh
type_stubs/: flask_login.pyi  flask_mail.pyi  is_safe_url.pyi  parameterized.pyi
(+2087 files in other folders)
