[build-system]
requires = ["setuptools", "wheel", "Babel"]
build-backend = "build_support.backend"
backend-path = ["."]

[project]
name = "arbeitszeitapp"
version = "0.0.0"
classifiers = [
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3.11",
]

[project.optional-dependencies]
profiling = ["flask_profiler"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = [
    "arbeitszeit",
    "arbeitszeit.*",
    "arbeitszeit_flask",
    "arbeitszeit_flask.*",
    "arbeitszeit_web",
    "arbeitszeit_web.*",
]

[tool.black]
target-version = ['py311']
extend-exclude = '''
(
  ^/arbeitszeit_flask/development_settings\.py |
  ^/arbeitszeit_flask/migrations/
)
'''

[tool.isort]
profile = "black"
multi_line_output = 3
skip = "arbeitszeit_flask/migrations"

[tool.mypy]
files = [
    "arbeitszeit",
    "arbeitszeit_benchmark",
    "arbeitszeit_development",
    "arbeitszeit_flask",
    "arbeitszeit_web",
    "build_support",
    "tests"
]
mypy_path = "type_stubs"
exclude = '''
    migrations/
'''
disable_error_code = "type-abstract"

[[tool.mypy.overrides]]
module = [
    "arbeitszeit",
    "arbeitszeit_web",
    "arbeitszeit_flask",
    "tests"
]
allow_untyped_defs = false

[[tool.mypy.overrides]]
module = [ "arbeitszeit_flask.database.models" ]
ignore_errors = true

[[tool.mypy.overrides]]
module = [
    "flask_babel",
    "flask_login",
    "flask_restx.*",
    "flask_wtf",
    "matplotlib.*",
    "parameterized.*",
    "sqlalchemy.*",
    "wtforms.*",
]
ignore_errors = true

[[tool.mypy.overrides]]
module = [
    "sqlalchemy.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:.*jsonschema.RefResolver is deprecated.*:DeprecationWarning:flask_restx\\.api",
]