[metadata]
name = arbeitszeitapp
license_files = LICENSE
classifiers =
    License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)

[options]
packages = find:
include_package_data = True

[flake8]
ignore = E501,W503,E712
exclude =
    .git/**
    .direnv/**
    arbeitszeit_flask/development_settings.py
    arbeitszeit_flask/production_settings.py
    custom_settings.py
    migrations/**
    venv/**

[mypy]
ignore_missing_imports = True
files = arbeitszeit/**/*.py, tests/**/*.py, arbeitszeit_flask/**/*.py, arbeitszeit_web/**/*.py
mypy_path = type_stubs

[mypy-arbeitszeit.*,arbeitszeit_web.*]
allow_untyped_defs = False
ignore_missing_imports = False

[mypy-arbeitszeit_flask.*]
check_untyped_defs = True

[mypy-tests.*]
check_untyped_defs = True
