[metadata]
name = arbeitszeitapp
license_files = LICENSE
classifiers =
    License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)

[options]
packages = find:
include_package_data = True

[flake8]
ignore = E501,W503,E712
per-file-ignores =
    arbeitszeit_flask/database/repositories.py: E711
exclude =
    .git/**
    .direnv/**
    arbeitszeit_flask/development_settings.py
    arbeitszeit_flask/production_settings.py
    custom_settings.py
    arbeitszeit_flask/migrations/**
    venv/**
