[metadata]
name = arbeitszeitapp
license_files = LICENSE
classifiers =
    License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)

[options]
packages = find:
include_package_data = True

[update_catalog]
input_file = arbeitszeit_flask/translations/messages.pot
output_dir = arbeitszeit_flask/translations
no_fuzzy_matching = True
width = 78

[compile_catalog]
directory = arbeitszeit_flask/translations

[extract_messages]
mapping_file = babel.cfg
keywords = lazy_gettext
output_file = arbeitszeit_flask/translations/messages.pot
input_paths = .

[init_catalog]
input_file = arbeitszeit_flask/translations/messages.pot
output_dir = arbeitszeit_flask/translations

[flake8]
ignore = E501,W503,E712
per-file-ignores =
    arbeitszeit_flask/database/repositories.py: E711
exclude =
    .git/**
    .direnv/**
    arbeitszeit_flask/development_settings.py
    arbeitszeit_flask/production_settings.py
    custom_settings.py
    arbeitszeit_flask/migrations/**
    venv/**
